# li_bot

./: .gitignore  .gitmodules  README.md
OCR/: video_spine_ocr.py
OCR/shelf_viewer/: shelf_order.json
additional/OCR/: d455_spine_ocr.py  video_spine_ocr.py
additional/OCR/camera/: innomaker_u20_start.sh
additional/OCR/shelf_viewer/: shelf_order.json  viewer.html
additional/webUI/: package.json
additional/webUI/public/: Bookreturnsmanager.js  app.js  index.html
libot_bringup/config/: gazebo_bridge.yaml
libot_description/rviz/: urdf_config.rviz
libot_description/urdf/: arm.xacro  camera.xacro  common_properties.xacro  gripper.xacro  gripper_gazebo.xacro  standalone_arm.urdf.xacro
src/flex_bot_odometry/: CMakeLists.txt
src/flex_bot_odometry/config/: wheel_odom.yaml
src/flex_bot_odometry/include/flex_bot_odometry/: wheel_odom_node.hpp
src/flex_bot_odometry/launch/: wheel_odom.launch.py
src/flex_bot_odometry/src/: main.cpp  wheel_odom_node.cpp
src/libot/doc/: terminal_pub_cmds.txt
src/libot/libot_bringup/: CMakeLists.txt  package.xml
src/libot/libot_bringup/launch/: libot_basic.launch.xml
src/libot/libot_bringup/world/: test_world.sdf
src/libot/libot_description/: CMakeLists.txt  package.xml
test/: d455_snapshot.py  d455_spine_ocr.py  iphone_spine_ocr.py  sequence_validate.py  shelf_order.json  shelf_order_validation_report.txt  video_spine_ocr.py
test/shelf_viewer/: shelf_order.json  viewer.html
webUI/: libot-interface.html  package-lock.json  server.js
webUI/public/: app.js  index.html
(+6 files in other folders)
