cmake_minimum_required(VERSION 3.22)
project(flex_bot_odometry)

# Default to C++17
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2 REQUIRED)

include_directories(include)

add_executable(wheel_odom_node
  src/main.cpp
  src/wheel_odom_node.cpp
)

ament_target_dependencies(wheel_odom_node
  rclcpp
  std_msgs
  nav_msgs
  geometry_msgs
  tf2
)

install(TARGETS wheel_odom_node
  DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY launch config
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
